--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -19,6 +19,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
+        pip install -r requirements-dev.txt
         pip install pylint
 
     - name: Analysing the code with pylint
