--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -5,31 +5,23 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11"]
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Checkout submodule
-      uses: actions/checkout@v3
-      with:
-        repository: EECA-NZ/py-eecadata
-        path: py-eecadata
-        ssh-key: ${{ secrets.SUBMODULE_DEPLOY_KEY }}
-        persist-credentials: false
-
-    - name: Set up Python
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11'
+        python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
+    - name: Install package and other dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pytest coverage
         pip install .
-        cd ..
-        pip install -r requirements.txt
         pip install -r requirements-dev.txt
   
     - name: Run tests
