--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -1,9 +1,9 @@
-name: Pylint
+name: Python Tests
 
 on: [push]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -20,10 +20,13 @@ jobs:
     - name: Install package and other dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install pytest coverage
         pip install .
         pip install -r requirements-dev.txt
-
-    - name: Analysing the code with pylint
+  
+    - name: Run tests
       run: |
-        pylint --disable=R0801 $(git ls-files '*.py')
+        coverage run -m pytest
+
+    - name: Generate coverage report
+      run: coverage report
