--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.0.0", "wheel"]  # Ensure setuptools is at a sufficient version
+requires = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -15,4 +15,11 @@ dependencies = [
     "requests",
     "httpx"
 ]
-scripts = {"electrify_app" = "app.main:run"}
+[project.scripts]
+electrify_app = "app.main:run"
+
+[project.urls]
+Homepage = "https://github.com/EECA-NZ/home-efficiency-calculator"
+
+[tool.setuptools]
+packages = { find = { exclude = ["lookup", "lookup.*"] } }
